--- a/popup.html
+++ b/popup.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <title></title>
   <link href="popup.css" rel="stylesheet">
+  <script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
 <div id="user-window">
-  <form>
       <img src="smile.svg" alt="smile">
       <h1>emovie.live</h1>
       <div class="container">
-        <input type="text" id="login-field" name="login" placeholder="Логин">
-        <input type="text" id="password-field" name="password" placeholder="Пароль">
-        <input type="file" id="field-file" name="file">
-        <label for="field-file">Загрузить файл</label>
-        <button>Войти анонимно</button>
+        <input type="text" id="login-field" name="login" placeholder="Имя">
+        <input type="text" id="password-field" name="password" placeholder="Изображение">
+        <button id="field-file">Submit</button>
+		<button id ="log_in">Log in with Google</button>
+		<div id="friendDiv"></div>
       </div>
-  </form>
 </div>
 </body>
 </html>
