--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,8 @@
       <img src="smile.svg" alt="smile">
       <h1>emovie.live</h1>
       <div class="container">
-        <input type="text" id="login-field" name="login" placeholder="Имя">
-        <input type="text" id="password-field" name="password" placeholder="Изображение">
+        <input type="text" id="login-field" name="login" placeholder="Логин">
+        <input type="text" id="password-field" name="password" placeholder="Пароль">
         <button id="field-file">Submit</button>
 		<button id ="log_in">Log in with Google</button>
 		<div id="friendDiv"></div>
