--- a/popup.html
+++ b/popup.html
@@ -11,10 +11,13 @@
       <img src="smile.svg" alt="smile">
       <h1>emovie.live</h1>
       <div class="container">
-        <input type="text" id="login-field" name="login" placeholder="Логин">
+        <!--<input type="text" id="login-field" name="login" placeholder="Логин">
         <input type="text" id="password-field" name="password" placeholder="Пароль">
-        <button id="field-file">Submit</button>
+        <button id="field-file">Submit</button> -->
 		<button id ="log_in">Log in with Google</button>
+		<button id="submit">Submit</button>
+		<input type="file" id="field-file" name="file">
+        <label for="field-file">Загрузить файл</label>
 		<div id="friendDiv"></div>
       </div>
 </div>
